--- a/products.html
+++ b/products.html
@@ -99,7 +99,7 @@
     <section class="products-section seedlings-section">
         <div class="container">
             <h2>Hybrid Oil Palm Seedlings</h2>
-            <p class="section-intro">NIFOR-certified hybrid seedlings, carefully cultivated for optimal yield and early maturity.</p>
+            <p class="section-intro">ALLISSEE PROJENY HYBRID (APH) -certified hybrid seedlings, carefully cultivated for optimal yield and early maturity.</p>
             
             <div class="products-grid">
                 <div class="product-card fade-in">
